[gd_scene load_steps=2 format=3 uid="uid://ewr87m8f2mdf"]

[ext_resource type="Script" path="res://Components/BrainComponent/Mob/MobBrainComponent.gd" id="1_s3v2k"]

[node name="MobBrainComponent" type="Node"]
script = ExtResource("1_s3v2k")

[node name="JumpCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="JumpCooldownTimer" to="." method="_on_jump_cooldown_timer_timeout"]
